--- a/Hello.html
+++ b/Hello.html
@@ -7,24 +7,24 @@
 </head>
 <body>
   
-  <h1>Leadership goals and experience</h1>
+  <h1>Leadership Goals and Experience</h1>
 
-  <p> Below are relevant work/leadership experiences, and goals I have in that regard.</p>
+  <p>Below are my relevant work and leadership experiences, as well as the goals I have in that regard.</p>
 
-  <h2>Meditations on my Leadership Goals</h2>
+  <h2>Meditations on My Leadership Goals</h2>
   <p>
-    I would like to start up a club here at UT Austin, I have a interest/hobby set I would be more than enthused to share with other people, perhaps revive the old 
-    Austin lock-picking club, or bring back UT Billiards and go back to playing competitively. I sometimes also think I could start up my own original project with
-    a big fancy title like "Texas Classical Physics", and we'd call it TCP for short, with the slogan "None of the quantum nonsence". I've also noticed UT lacks a guitar
-    club, and while difficult to manage, is really easy to get off the ground.
+    I would like to start a club here at UT Austin. I have a variety of hobbies and interests that I would be excited to share with others—perhaps by reviving the old 
+    Austin lock-picking club or bringing back UT Billiards so we can resume playing competitively. I also sometimes think about starting my own organization with
+    a big fancy title like "Texas Classical Physics," which we would call TCP for short, with the slogan "None of the quantum nonsense." I’ve also noticed UT lacks a guitar
+    club, which, despite potentially being difficult to manage, should be relatively easy to get off the ground.
   </p>
 
-  <h3>Previous & Current leadership experince</h3>
+  <h3>Previous & Current Leadership Experience</h3>
   <p>
-    Prevously, the more "formal" club expereince's I've had were being the president of my Highschools Amereican Red Cross Club, where we would organise blood drives, field
-    trips to Red Cross meetings across Texas, and run school food drives, and othe community service events. Alot more recenlty, I have compeated in a Billiards tournyments 
-    accross Texas universites with a team. Today, I am a lead instructor at the Mathnasium institution where I work as an educator for students k-12.  
-     
+    Previously, my more formal club experience includes serving as the president of my high school’s American Red Cross Club, where we organized blood drives, took field
+    trips to Red Cross meetings across Texas, and ran school food drives and other community service events. More recently, I have competed in billiards tournaments 
+    across various Texas universities as part of a team. Today, I am a lead instructor at Mathnasium, where I work as an educator for students from kindergarten through 
+    12th grade.
   </p>
 
 </body>
