--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
     12th grade.
   </p>
 
+  <h3> What does leadership mean to me? </h3>
+  <p>
+    Leadership is an inductive resposiblity, it can be large or small change, but utilmatily will bring out leadershp in others. 
+  </p>
+
 </body>
 </html>
