--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   
-  <h1>Leadership Goals and Experience</h1>
+  <h1>Leadership Goals and Experience(updated)</h1>
 
   <p>Below are my relevant work and leadership experiences, as well as the goals I have in that regard.</p>
 
